jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL2-bad-UCHAR1.shex
# STRING_LITERAL2 with bad UCHAR1
# source: turtle-syntax-bad-esc-02.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["\uWXYZ"]
}
